2008-10-10  Chris Marrin  <cmarrin@apple.com>

Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=21025
        CSS transition with duration=0 and delay=0 doesn't override ongoing transition

        Test: transitions/interrupt-zero-duration.html

        * page/animation/CompositeAnimation.cpp:
        (WebCore::CompositeAnimation::updateTransitions):



Canonical link: https://commits.webkit.org/29730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37485 268f45cc-cd09-0410-ab3c-d52691b4dbfc